--- a/Files/curremtMatch.css
+++ b/Files/curremtMatch.css
@@ -1,6 +1,4 @@
 @import url("https://fonts.googleapis.com/css2?family=Baloo+Bhaijaan+2&family=IBM+Plex+Sans:wght@500&family=Nunito+Sans:wght@700&display=swap");
-/* 
-@import url("https://fonts.googleapis.com/css2?family=Baloo+Bhaijaan+2&family=IBM+Plex+Sans&family=Nunito+Sans:wght@700&family=Play&display=swap"); */
 
 .body {
   position: relative;
@@ -42,7 +40,7 @@
   border-radius: 50px;
   background-color: rgba(0, 0, 0, 0.7);
 }
-.matchContentPart2 {
+.matchContent {
   position: relative;
   display: flex;
   justify-content: center;
@@ -55,7 +53,7 @@
   transition: 1s;
   overflow-y: scroll;
 }
-.matchContentPart2Acive {
+.matchContentAcive {
   height: 30%;
 }
 
@@ -75,25 +73,25 @@
   border: 2px solid white;
   backdrop-filter: blur(2px);
 }
-.matchContentPart2::-webkit-scrollbar {
+.matchContent::-webkit-scrollbar {
   width: 10px;
   border-radius: 10px;
   box-shadow: inset 0 0 8px black;
   visibility: hidden;
 }
-.matchContentPart2::-webkit-scrollbar-track {
+.matchContent::-webkit-scrollbar-track {
   background-color: transparent;
   width: 10px;
   height: 10px;
 }
-.matchContentPart2::-webkit-scrollbar-thumb {
+.matchContent::-webkit-scrollbar-thumb {
   background: white;
   width: 10px;
   height: 20px;
   border-radius: 50px;
   border: 2px solid black;
 }
-.matchContentPart2::-webkit-scrollbar-corner {
+.matchContent::-webkit-scrollbar-corner {
   background-color: black;
   width: 10px;
 }
