--- a/Files/currentPosition.css
+++ b/Files/currentPosition.css
@@ -32,7 +32,18 @@
   border: 0px solid red;
   /* background-color: black; */
 }
-.profileHeading a {
+.headingName {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  flex-wrap: wrap;
+  width: 100%;
+  height: 50%;
+  border: 0px solid red;
+}
+.headingName a {
   color: white;
   font-size: 1.8rem;
   text-overflow: ellipsis;
@@ -40,9 +51,40 @@
   white-space: nowrap;
   padding: 0 2rem;
   font-family: "Play", sans-serif;
-  /* font-family: "Nunito Sans", sans-serif; */
-  /* font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
-    "Lucida Sans Unicode", Geneva, Verdana, sans-serif; */
+}
+.headingOptions {
+  position: relative;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  flex-direction: row;
+  flex-wrap: wrap;
+  width: 70%;
+  height: 50%;
+  border: 0px solid red;
+}
+
+.profileHeading a {
+  /* margin-left: 5rem; */
+  color: white;
+  transition: 1s;
+  font-size: 1.2rem;
+  letter-spacing: 0.05rem;
+  font-family: "Play", sans-serif;
+}
+.profileHeading button {
+  background-color: transparent;
+  color: #09aeff;
+  border-radius: 50px;
+  padding: 0 1rem;
+  transform: scale(0.8);
+  border: 1px solid white;
+  cursor: pointer;
+  font-family: "Play", sans-serif;
+  letter-spacing: 0.05rem;
+}
+.profileHeading button:hover {
+  transform: scale(0.78);
 }
 .allProfile {
   position: relative;
@@ -83,7 +125,8 @@
   background-color: black;
   width: 10px;
 }
-.profileList {
+.profileList,
+.profileListWinMatches {
   position: relative;
   display: flex;
   justify-content: center;
@@ -100,8 +143,25 @@
   background-color: rgba(225, 225, 225, 0.5);
   box-shadow: 20px 20px 50px rgba(0, 0, 0, 0.5);
   backdrop-filter: blur(2px);
+  transform-style: preserve-3d;
+  backface-visibility: hidden;
+  transition: 2s;
 }
-.profileList a {
+.profileListActive {
+  display: none;
+  transform: rotateY(180deg);
+}
+.profileListWinMatches {
+  display: none;
+  transform: rotateY(180deg);
+}
+.profileListWinMatchesActive {
+  display: flex;
+  transform: rotateY(0deg);
+}
+
+.profileList a,
+.profileListWinMatches a {
   color: black;
   font-size: 0.9rem;
   letter-spacing: 0.1rem;
