--- a/Files/tournamentHistory.css
+++ b/Files/tournamentHistory.css
@@ -123,23 +123,22 @@
 #rankItems {
   position: absolute;
   display: flex;
-  font-size: 2rem;
+  font-size: 3.5rem;
   font-weight: bold;
-  transform: translateX(-4.7rem);
+  transform: translateX(-5.3rem);
 }
 #speakingBtn {
   cursor: pointer;
   border: 1px solid white;
   background-color: rgba(45, 85, 205, 0.5);
   padding: 0rem 1rem;
-  /* margin-left: -0.5rem !important; */
+}
+#speakingBtn:hover {
+  transform: scale(0.9);
 }
 #speakingBtn a {
   font-size: 1rem;
   color: white;
   font-family: "Play", sans-serif;
-}
-#speakingBtn:hover {
   cursor: pointer;
-  font-size: 0.8rem;
 }
