--- a/Files/footer.css
+++ b/Files/footer.css
@@ -30,7 +30,7 @@
   margin-bottom: 0.2rem;
   /* padding: 0 0.3rem; */
   width: auto;
-  height: 60%;
+  height: 50%;
   border-radius: 50px;
   background-color: white;
 }
@@ -41,7 +41,7 @@
   display: flex;
   width: auto;
   height: 100%;
-  padding: 0 0.5rem;
+  padding: 0 0;
   border: 0px solid red;
 }
 .navigator ul li {
@@ -69,7 +69,7 @@
   display: block;
   padding: 0.3rem;
   color: var(--clr);
-  font-size: 1.2rem;
+  font-size: 1rem;
   transition: 0.5s;
   transform: translateY(0rem);
   border: 0px solid red;
@@ -80,7 +80,7 @@
 }
 
 .navigator ul li.active a .icon {
-  transform: translateY(-1.3rem);
+  transform: translateY(-1rem);
 }
 .navigator ul li a .iconText {
   position: absolute;
@@ -94,5 +94,6 @@
 }
 .navigator ul li.active a .iconText {
   opacity: 1;
-  transform: translateY(0.5rem);
+  font-size: 0.9rem;
+  transform: translateY(0.3rem);
 }
