--- a/Files/tournamentHistory.css
+++ b/Files/tournamentHistory.css
@@ -41,6 +41,8 @@
   color: white;
   font-size: 1.9rem;
   padding: 0.2rem 1rem;
+  word-spacing: 0.5rem;
+  letter-spacing: 0.05rem;
   border: 1px solid white;
   background-color: rgba(226, 40, 233, 0.4);
   border-radius: 50px;
@@ -59,6 +61,15 @@
   border: 0px solid white;
   overflow-y: scroll;
 }
+.profileHeading {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 10%;
+  border: 1px solid red;
+}
 .tournamentProfileList {
   position: relative;
   display: flex;
@@ -72,7 +83,7 @@
   height: min-content;
   border: 1px solid black;
   border-radius: 30px;
-  background-color: rgba(225, 225, 225, 0.7);
+  background-color: rgba(225, 225, 225, 0.2);
   backdrop-filter: blur(10px);
 }
 .tournamentProfileBody::-webkit-scrollbar {
@@ -107,14 +118,16 @@
   margin: 0.5rem 0;
   padding: 0.5rem;
   width: 75%;
+  font-weight: bold;
   height: auto;
-  border: 1px solid black;
-  border-radius: 30px;
+  border: 2px solid black;
+  border-radius: 50px;
+  background-color: rgba(225, 225, 225, 0.5);
 }
 .tntProfItems a {
   display: block;
   color: black;
-  font-size: 1.2rem;
+  font-size: 1.3rem;
   font-family: "Play", sans-serif;
   margin: 0.05rem 0.5rem;
   letter-spacing: 0.15rem;
@@ -123,9 +136,11 @@
 #rankItems {
   position: absolute;
   display: flex;
-  font-size: 3.5rem;
+  color: purple;
+  text-shadow: 0 0 5px white;
+  font-size: 3rem;
   font-weight: bold;
-  transform: translateX(-5.3rem);
+  transform: translateX(-5rem);
 }
 #speakingBtn {
   cursor: pointer;
