implemented setting page and some changes in other files

--- a/Files/index.css
+++ b/Files/index.css
@@ -82,7 +82,7 @@ form {
   border: 0px solid white;
 }
 .formElementHeading a {
-  color: white;
+  color: black;
   font-size: 1.2rem;
   margin-top: 0.5rem;
   padding: 0.05rem 1rem;
@@ -90,8 +90,6 @@ form {
   border: 1px solid white;
   background-color: rgba(23, 236, 4, 0.5);
   font-family: "Play", sans-serif;
-  /*font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
-    "Lucida Sans Unicode", Geneva, Verdana, sans-serif; */
 }
 .formElementBody {
   position: relative;
