--- a/Files/curremtMatch.css
+++ b/Files/curremtMatch.css
@@ -117,6 +117,7 @@
   color: orange;
   margin-top: 0.5rem;
   font-size: 2rem;
+  padding: 0rem 1rem;
   font-family: "Baloo Bhaijaan 2", cursive;
   text-overflow: ellipsis;
   overflow: hidden;
