--- a/Files/setting.css
+++ b/Files/setting.css
@@ -19,24 +19,167 @@
   align-items: center;
   width: 100%;
   height: 15%;
-  border: 1px solid red;
+  border: 0px solid red;
 }
 .settingHeader a {
   color: white;
-  padding: 0.2rem 2rem;
-  font-size: 2.2rem;
+  padding: 0 1rem;
+  font-size: 2rem;
   font-family: "Play", sans-serif;
   font-weight: bolder;
   border: 1px solid white;
   border-radius: 50px;
-  background-color: rgba(252, 125, 6, 0.5);
+  background-color: rgba(226, 40, 233, 0.4);
 }
 .settingContent {
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 85%;
+  border: 0px solid white;
+}
+.form {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  flex-direction: row;
+  flex-wrap: wrap;
+  width: 90%;
+  height: 90%;
+  border: 0px solid red;
+  border-radius: 30px;
+  overflow-y: scroll;
+}
+.formBtnCover {
+  position: relative;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  flex-direction: row;
+  flex-wrap: wrap;
+  width: 90%;
+  height: 10%;
+  border: 0px solid red;
+}
+.formBtnCover a {
+  position: relative;
+  color: white;
+  font-size: 1.2rem;
+  padding: 0rem 1rem;
+  border: 1px solid white;
+  border-radius: 50px;
+  cursor: pointer;
+  font-family: "Play", sans-serif;
+  background-color: rgba(252, 125, 6, 0.5);
+}
+.formBtnCover a:hover {
+  font-size: 1.1rem;
+}
+
+.form::-webkit-scrollbar {
+  width: 5px;
+  border-radius: 10px;
+  box-shadow: inset 0 0 8px black;
+  visibility: hidden;
+}
+.form::-webkit-scrollbar-track {
+  background-color: transparent;
+  width: 10px;
+  height: 10px;
+}
+.form::-webkit-scrollbar-thumb {
+  background: white;
+  width: 2px;
+  height: 2px;
+  border-radius: 50px;
+  border: 2px solid black;
+}
+.form::-webkit-scrollbar-corner {
+  background-color: black;
+  width: 5px;
+}
+.formElement {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  flex-wrap: wrap;
+  width: 90%;
+  height: 30%;
+  margin: 0.2rem 0rem;
+  padding: 0.1rem 1rem;
+  border: 1px solid white;
+  border-radius: 50px;
+  background-color: rgba(225, 225, 225, 0.5);
+}
+.elementHeading {
   position: relative;
   display: flex;
   justify-content: center;
   align-items: center;
   width: 100%;
-  height: 85%;
+  height: 40%;
+  border: 0px solid red;
+}
+.elementHeading a {
+  color: black;
+  font-size: 1.4rem;
+  margin-top: 0.1rem;
+  padding: 0.05rem 1rem;
+  border-radius: 50px;
+  font-family: "Play", sans-serif;
+  /* background-color: rgba(0, 0, 0, 0.5); */
+  background-color: rgba(23, 236, 4, 0.5);
   border: 1px solid white;
+}
+.elementContent {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  flex-wrap: wrap;
+  width: 100%;
+  height: 60%;
+  border: 0px solid red;
+}
+.element {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 50%;
+  padding: 0.5rem 0rem;
+  border: 0px solid red;
+}
+.element label {
+  color: black;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 70%;
+  height: 100%;
+  font-size: 1.2rem;
+  border: 0px solid white;
+  font-family: "Play", sans-serif;
+  cursor: pointer;
+}
+.element input {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 30%;
+  height: 100%;
+  outline: none;
+  transform: scale(1.5);
+  font-family: "Play", sans-serif;
+  cursor: pointer;
 }
