--- a/Files/tournamentHistory.css
+++ b/Files/tournamentHistory.css
@@ -122,16 +122,20 @@
   height: auto;
   border: 2px solid black;
   border-radius: 50px;
-  background-color: rgba(225, 225, 225, 0.5);
+  background-color: rgba(225, 225, 225, 0.1);
 }
 .tntProfItems a {
   display: block;
   color: black;
-  font-size: 1.3rem;
+  font-size: 1.2rem;
   font-family: "Play", sans-serif;
   margin: 0.05rem 0.5rem;
   letter-spacing: 0.15rem;
   transform: translateX(1rem);
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
+  border: 0px solid red;
 }
 #rankItems {
   position: absolute;
