--- a/Files/footer.css
+++ b/Files/footer.css
@@ -18,6 +18,7 @@
   border-top-left-radius: 0px;
   border-top-right-radius: 0px;
   background-color: rgba(0, 0, 0, 0.6);
+  /* z-index: 5; */
 }
 :root {
   --clr: black;
