--- a/Files/setting.css
+++ b/Files/setting.css
@@ -18,7 +18,7 @@
   justify-content: center;
   align-items: center;
   width: 100%;
-  height: 15%;
+  height: 10%;
   border: 0px solid red;
 }
 .settingHeader a {
@@ -39,8 +39,13 @@
   justify-content: center;
   align-items: center;
   width: 100%;
-  height: 85%;
+  height: 90%;
   border: 0px solid white;
+  transition: 1s;
+}
+.settingContentActive {
+  height: 30%;
+  /* transform: 0.5s; */
 }
 .form {
   position: relative;
@@ -63,6 +68,7 @@
   flex-wrap: wrap;
   width: 90%;
   height: 10%;
+  min-height: 48px;
   border: 0px solid red;
 }
 .formBtnCover a {
@@ -111,6 +117,7 @@
   flex-wrap: wrap;
   width: 90%;
   height: 30%;
+  min-height: 130px;
   margin: 0.2rem 0rem;
   padding: 0.1rem 1rem;
   border: 1px solid white;
