--- a/Files/setting.css
+++ b/Files/setting.css
@@ -7,10 +7,10 @@
   width: 100%;
   height: 80%;
   border: 0px solid red;
-  /* background-image: url(images/ocean.jpeg);
- background-position: center;
- background-size: cover;
- background-repeat: repeat; */
+  /* background-image: url(images/setting.jpg);
+  background-position: center;
+  background-size: cover;
+  background-repeat: repeat; */
 }
 .settingHeader {
   position: relative;
