--- a/Files/responsive.css
+++ b/Files/responsive.css
@@ -128,6 +128,15 @@
   .currentMatchName a {
     font-size: 1.8rem;
   }
+  .header {
+    height: 8%;
+  }
+  .body {
+    height: 85%;
+  }
+  .footer {
+    height: 7%;
+  }
 }
 @media screen and (max-width: 450px) {
   html {
