--- a/Files/index.css
+++ b/Files/index.css
@@ -26,7 +26,7 @@
   border: 0px solid red;
 }
 .headingBody a {
-  color: white;
+  color: black;
   padding: 0 2rem;
   font-size: 2.2rem;
   font-family: "Play", sans-serif;
