--- a/Files/squad.css
+++ b/Files/squad.css
@@ -121,7 +121,7 @@
 .matchCategory a {
   display: block;
   color: black;
-  font-size: 1.5rem; /*1.2*/
+  font-size: 1.5rem !important; /*1.2*/
   margin-top: 0.5rem; /**/
   padding: 1rem 1rem;
   font-family: "Baloo Bhaijaan 2", cursive;
