--- a/Files/header.css
+++ b/Files/header.css
@@ -41,7 +41,7 @@
   position: relative;
   display: block;
   color: white;
-  font-size: 1.2rem;
+  font-size: 1.2rem !important;
   font-family: "Play", sans-serif;
   text-decoration: none;
   font-weight: bolder;
@@ -50,7 +50,7 @@
 }
 .siteNameHeader #C {
   color: #09aeff;
-  font-size: 3rem;
+  font-size: 3rem !important;
   transform: translateX(0);
 }
 
