--- a/Files/squad.css
+++ b/Files/squad.css
@@ -117,6 +117,16 @@
   /* filter: blur(0.1px); */
 }
 
+.matchTeamName {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 50%; /*100*/
+  border: 0px solid red;
+  /* white-space: pre-wrap; */
+}
 .matchTeamName a,
 .matchCategory a {
   display: block;
@@ -175,15 +185,6 @@
   align-items: center;
   width: 100%;
   height: 50%;
-  border: 0px solid red;
-}
-.matchTeamName {
-  position: relative;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  height: 50%; /*100*/
   border: 0px solid red;
 }
 .matchBoxesBody {
